# enigma2-plugins

./: Makefile.am  configure.ac
DB/: Makefile.am
DB/AutoBackup/: plugin.py
DB/NewsReader/data/: feeds.xml.default
DB/Panel/: Makefile.am  panel.py  plugin.py
DB/SoftcamSetup/: Makefile.am
